--- a/packages.config
+++ b/packages.config
@@ -3,13 +3,14 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
-  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="HandlebarsHelper" version="1.1.0" targetFramework="net45" />
+  <package id="Inflector" version="1.0.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Jurassic" version="2.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.1.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0-alpha1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
@@ -31,7 +32,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
